More cleanup/fixing
Fixes silly hats not rendering right, adds steel hat - steel had has some render bugs though
some work towards fixing nature-power
fixes an problem initing species gene
more documentation work for checklists